# pay2u_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release-production.yml
app/auth_jwt/: apps.py
app/auth_jwt/api/: serializers.py  urls.py  views.py
app/core/: admin.py  models.py  services.py  utils.py
app/core/api/: exceptions.py  generics.py  mixins.py  pagination.py  serializers.py
app/core/management/commands/: seed.py
app/subscriptions/: admin.py  apps.py  enums.py  factories.py  models.py  services.py
app/subscriptions/api/: exceptions.py  serializers.py  urls.py  views.py
app/subscriptions/migrations/: 0001_initial.py  0002_alter_category_table_alter_invoice_table.py  0002_cashback_created_at_cashback_deleted_at_and_more.py  0003_promocode_subscription_tariff.py  0004_alter_tariff_options_alter_subscription_cashback_and_more.py  0005_alter_tariff_subscription.py  0006_alter_category_name.py  0007_alter_subscription_category_and_more.py  0008_remove_subscription_image_subscription_image_detail_and_more.py  0009_alter_promocode_options_alter_tariff_options_and_more.py  0010_clientsubscription.py  0011_alter_clientsubscription_expiration_date.py  0012_alter_clientsubscription_options_and_more.py  0013_alter_clientsubscription_client_and_more.py  0014_alter_clientsubscription_expiration_date.py  0015_alter_clientsubscription_expiration_date.py  0016_alter_clientsubscription_expiration_date_and_more.py  0017_tariff_days_amount_and_more.py  0018_alter_clientsubscription_expiration_date_and_more.py  0019_alter_clientsubscription_expiration_date_and_more.py  0020_alter_tariff_options_remove_tariff_name_and_more.py  0021_alter_clientsubscription_expiration_date_and_more.py  0022_alter_clientsubscription_expiration_date.py  0023_alter_clientsubscription_expiration_date_and_more.py  0024_remove_clientsubscription_is_liked_and_more.py  0025_remove_subscription_is_liked_and_more.py  0026_alter_clientsubscription_expiration_date_and_more.py  0027_subscription_popularity_and_more.py  0028_alter_cashback_amount_and_more.py  0029_remove_cashback_min_max_range_alter_cashback_amount_and_more.py  0030_alter_clientsubscription_expiration_date_and_more.py  0031_alter_clientsubscription_expiration_date_and_more.py  0032_alter_clientsubscription_expiration_date_and_more.py  0033_clientcashbackhistory_client_subscription_and_more.py  0034_subscription_conditions_and_more.py  0035_alter_clientsubscription_expiration_date_and_more.py
app/users/: admin.py  apps.py  factories.py  models.py
app/users/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_alter_user_email.py  0004_remove_user_notification_date.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py  dev.py
config/settings/: __init__.py  celery.py  cors.py  email.py  jwt.py  logs.py  rest_framework.py
docker/: .dockerignore  Dockerfile  local.Dockerfile  production.Dockerfile  web_entrypoint.sh
docker/nginx/: nginx.conf
