[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Егор Ремезов <agrobobrov@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.14.0"
django-json-widget = "^1.1.1"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
gunicorn = "^21.2.0"
djangorestframework-simplejwt = "^5.3.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
babel = "^2.14.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pre-commit = "^3.6.2"
factory-boy = "^3.3.0"
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [
    '*.yml',
    '*.sh',
    '.log'
]
select = ["F", "E", "W", "C90",
    "I", "N", "S", "B", "A",
    "ISC", "T20", "Q", "PTH"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"
avoid-escape = false